--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.3",
     "antd": "^5.24.5",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
