--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
